24-September-2013:
==================
+ Added com.tightdb.Table.equals() and fixed com.tightdb.Group.equals()

23-September-2013:
==================
+ Added com.tightdb.IOException, as a RuntimeException can be thrown from all methods operating on files, like Group(file), SharedGroup(file) etc.

20-September-2013:
==================
+ Added View.getColumnCount(), View.getColumnIndex(colIndex), View.getColumnName(colIndex), View.getColumnType(colIndex) to Dynamic interface
- Removed Table.getColumnCount(), Table.getColumnIndex(colIndex), Table.getColumnName(colIndex), Table.getColumnType(colIndex) from Typed interface
! BREAKING CHANGE: Added limit parameter to all query aggregates which already had a start, and stop parameter.


19-September-2013:
==================
+ Multiple tables of same type in typed interface can be added to same group, by specifying a custom name in the constructor.


16-September-2013:
=================
! BREAKING CHANGE: Removed ByteBuffer as type for Binary. Added byte[] as only type for Binary in both dynamic and typed interface.


10-September-2013:
==================
- Deprecated ReadTransaction.close()
+ WriteTransaction.commit() now throws IllegalStateException

09-September-2013:
==================
+ Added Table.toString(), Table.toString(maxRows), Table.rowToString(row)
+ Added TableView.toString(), TableView.toString(maxRows), TableView.rowToString(row)
+ Added Group.toString(), toJson(), equals()
+ Added Mixed.getReadableValue()
+ Added SharedGroup.hasChanged()
+ Added validation of parameters in all methods. Exceptions are now thrown if invalid parameters are passed. 

06-September-2013:
=================
! BUGFIX: Fixed small leak in TableQuery.

04-September-2013
===============
+ Added TableQuery.equal for Date
+ Added TableQuery.eq for Date
+ Added TableQuery.notEqual for Date
+ Added TableQuery.neq for Date
+ Added TableQuery.greaterThan for Date
+ Added TableQuery.gt for Date
+ Added TableQuery.greaterThanOrEqual for Date